--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,9 +13,9 @@
     <div class="quarterly-variable-comp-div">
         <form>
             <label>Quarterly Quota:</label>
-                <input type="text" name="quarterly-quota" id="quarterly-quota" placeholder="237500">
+                <input type="number" name="quarterly-quota" id="quarterly-quota" placeholder="237500">
             <label>Annualized Variable Compensation:</label>
-                <input type="text" name="variable-comp" id="variable-comp" placeholder="80000">
+                <input type="number" name="variable-comp" id="variable-comp" placeholder="80000">
         </form>
     <div>
         <h2>Current ICR:</h2>
@@ -31,7 +31,8 @@
     </div>
     <div>
         <form>
-            <input type="text" placeholder="200000" id="current-attainment">
+            <label>Current Attainment:</label>
+            <input type="number" placeholder="200000" id="current-attainment">
         </form>
     </div>
     <div>
@@ -39,20 +40,22 @@
     </div>
         <form>
             <label>Current Term Length in Years</label>
-                <input type="text" name="current-term-length" id="current-term-length" placeholder="2">
+                <input type="number" name="current-term-length" id="current-term-length" placeholder="2">
             <label>Current ACV</label>
-                <input type="text" name="current-acv" id="current-acv" placeholder="50,000">
+                <input type="number" name="current-acv" id="current-acv" placeholder="100000">
             <label>Current Revenue in Years 2+</label>
-                <input type="text" name="current-multi-year-revenue" id="current-multi-year-revenue" placeholder="100,000">
+                <input type="number" name="current-multi-year-revenue" id="current-multi-year-revenue" placeholder="100000">
             <label>Current Services Hours</label>
-                <input type="text" name="current-services-hours" id="current-services-hours" placeholder="80">
+                <input type="number" name="current-services-hours" id="current-services-hours" placeholder="80">
             <label>Current Payment Terms</label>
             <select id="current-payment-terms">
                 <option value="Annual" name="annual-payments" selected>Annual</option>
                 <option value="Semi-Annual or Quarterly" name="semi-annual-payments">Semi-Annual or Quarterly</option>
             </select>
         </form>
-        <button id="submit">Submit</button>
+        <div>
+            <button id="submit">Submit</button>
+        </div>
     <div>
         <h2>Expected Payout:</h2>
         <h2 id="current-deal-commission"></h2>
