--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,8 +34,8 @@ h2 {
 }
 
 .hero-text {
-    margin-top: 27rem;
-    margin-left: 10rem;
+    margin-top: 70vh;
+    margin-left: 10vh;
     font-size: 60px;
 }
 
@@ -52,7 +52,14 @@ h2 {
 /* Styling the forms */
 .form-body {
     position: relative;
+    background-color: #FFFFFF;
+    padding: 10vh 15%;
+}
+
+.form-body-container {
     background-color: #E6E7E9;
+    border-radius: 3px;
+    box-shadow: 0px 12px 15px rgba(0, 0, 0, 0.25);
 }
 
 input {
@@ -63,6 +70,14 @@ input {
     font-size: 14px;
     border: none;
     margin-bottom: 2rem;
+
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+
+    transition: box-shadow .2s;
+}
+
+input:focus {
+    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25)
 }
 
 form {
@@ -132,6 +147,11 @@ label {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
 }
 
+.expected-payout-header {
+    display: none;
+    margin-bottom: 5rem;
+}
+
 .expected-payout {
     display: none;
     margin-bottom: 1rem;
@@ -139,4 +159,10 @@ label {
 
 .percentage-to-quota-output-header {
     display: none;
+}
+
+.results {
+    margin-top: 5rem;
+    text-align: center;
+    padding-bottom: 10rem;
 }
