--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,68 +14,75 @@
         <div class="hero-text-divider"></div>
     </div>
     <div class="form-body">
-    <div class="comp-details">
-        <h1 class="comp-details-main-header">How is your comp plan structured?</h1>
-    <div class="quarterly-variable-comp-div">
-        <form class="quarterly-variable-comp-div">
-            <label>Quarterly Quota:</label>
-                <input type="number" name="quarterly-quota" id="quarterly-quota" placeholder="e.g. 237500" required>
-            <br>
-            <label>Annualized Variable Compensation:</label>
-                <input type="number" name="variable-comp" id="variable-comp" placeholder="e.g. 80000" required>
-        </form>
-    </div>
-    </div>
-    <div class="percentage-to-quota">
-        <div class="percentage-to-quota-header">
-            <h1>How are you doing for the quarter?</h1>
-        </div>
-        <div class="percentage-to-quota-body">
-            <div>
-                <form>
-                    <label>Current Attainment:</label>
-                    <input type="number" placeholder="e.g. 200000" id="current-attainment" required>
-                </form>
-            </div>
-        </div>
-    </div>
-    <div class="current-deal-form">
-        <div>
-            <h1> What is the structure of the current deal?</h1>
-        </div>
-            <form>
-                <label>Current Term Length in Years:</label>
-                    <input type="number" name="current-term-length" id="current-term-length" placeholder="e.g. 2" required>
+    <div class="form-body-container">
+        <div class="comp-details">
+            <h1 class="comp-details-main-header">How is your comp plan structured?</h1>
+        <div class="quarterly-variable-comp-div">
+            <form class="quarterly-variable-comp-div">
+                <label>Quarterly Quota:</label>
+                    <input type="number" name="quarterly-quota" id="quarterly-quota" placeholder="e.g. $237,500" required>
                 <br>
-                <label>Current ACV:</label>
-                    <input type="number" name="current-acv" id="current-acv" placeholder="e.g. 100000" required>
-                <br>
-                <label>Current Revenue in Years 2+:</label>
-                    <input type="number" name="current-multi-year-revenue" id="current-multi-year-revenue" placeholder="e.g. 100000" required>
-                <br>
-                <label>Current Services Hours:</label>
-                    <input type="number" name="current-services-hours" id="current-services-hours" placeholder="e.g. 80" required>
-                <br>    
-                <label>Current Payment Terms:</label>
-                <select id="current-payment-terms">
-                    <option value="Annual" name="annual-payments" selected>Annual</option>
-                    <option value="Semi-Annual or Quarterly" name="semi-annual-payments">Semi-Annual or Quarterly</option>
-                </select>
-                <br>
+                <label>Annualized Variable Compensation:</label>
+                    <input type="number" name="variable-comp" id="variable-comp" placeholder="e.g. $80,000" required>
             </form>
-            <div>
-                <br>
-                <button class="submit-button" id="submit">Submit</button>
-            </div>
-        <div>
-            <h2 class= "expected-payout" id="expected-payout">Expected Payout:</h2>
-            <h2 id="current-deal-commission"></h2>
         </div>
-        <div>
+        </div>
+        <div class="percentage-to-quota">
+            <div class="percentage-to-quota-header">
+                <h1>How are you doing for the quarter?</h1>
+            </div>
+            <div class="percentage-to-quota-body">
+                <div>
+                    <form>
+                        <label>Current Attainment:</label>
+                        <input type="number" placeholder="e.g. $200,000" id="current-attainment" required>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="current-deal-form">
+            <div>
+                <h1> What is the structure of the current deal?</h1>
+            </div>
+                <form>
+                    <label>Current Term Length in Years:</label>
+                        <input type="number" name="current-term-length" id="current-term-length" placeholder="e.g. 2" required>
+                    <br>
+                    <label>Current ACV:</label>
+                        <input type="number" name="current-acv" id="current-acv" placeholder="e.g. $100,000" required>
+                    <br>
+                    <label>Current Revenue in Years 2+:</label>
+                        <input type="number" name="current-multi-year-revenue" id="current-multi-year-revenue" placeholder="e.g. $100,000" required>
+                    <br>
+                    <label>Current Services Hours:</label>
+                        <input type="number" name="current-services-hours" id="current-services-hours" placeholder="e.g. 80" required>
+                    <br>    
+                    <label>Current Payment Terms:</label>
+                    <select id="current-payment-terms">
+                        <option value="Annual" name="annual-payments" selected>Annual</option>
+                        <option value="Semi-Annual or Quarterly" name="semi-annual-payments">Semi-Annual or Quarterly</option>
+                    </select>
+                    <br>
+                </form>
+                <div>
+                    <br>
+                    <button class="submit-button" id="submit">Submit</button>
+                </div>
+        </div>
+        </div>
+    </div>
+    <div class="results" id="results">
+            <div>
+                <div>
+                    <h1 class="expected-payout-header" id="expected-payout-header">Here is your current attainment after this deal:</h1>
+                </div>
+                <div>
+                    <h2 class= "expected-payout" id="expected-payout">Expected Payout:</h2>
+                    <h2 id="current-deal-commission"></h2>
+                </div>
+            </div>
             <h2 class="percentage-to-quota-output-header" id="percentage-to-quota-output-header" >Percentage to Quota:</h2>
             <h2 id="percentage-to-quota-output"></h2>
-        </div>
-        </div>
     </div>
     <script src="/js/index.js"></script>
 </body>
