--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -140,6 +140,8 @@ label {
     border: none;
     border-radius: 3px;
 
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+
     transition: box-shadow .1s;
 }
 
