--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,7 @@
                 </form>
                 <div>
                     <br>
-                    <button class="submit-button" id="submit">Submit</button>
+                    <input type=submit class="submit-button" id="submit" value="Get Results"></input>
                 </div>
         </div>
         </div>
