--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -130,15 +130,17 @@ label {
 .submit-button {
     margin: 2rem;
     width: 7rem;
-    height: 2rem;
+    height: 2.5rem;
     outline: none;
     cursor: pointer;
-    font-size: 14px;
+
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 16px;
 
     border: 1px solid #000000;
 
     border: none;
-    border-radius: 3px;
+    border-radius: 5px;
 
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 
