--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -99,6 +99,10 @@ input::placeholder {
     opacity: .5;
 }
 
+input:invalid:required {
+    border: solid 1px red;
+}
+
 label {
     margin-left: 1rem;
     margin-right: 1rem;
