--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Proposal Helper</title>
+    <meta property="og:title" content="Proposal Helper" />
+    <meta property="og:image" content="/images/messages-preview.png"/>
     <link rel="icon" href="/images/icon2.png">
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300&display=swap" rel="stylesheet">
