delay loading until image is downloaded

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,6 +9,7 @@ body {
     margin: 0;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 100;
+    transition: opacity .1s;
 }
 
 h1 {
