--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -45,7 +45,7 @@ h2 {
     width: 9.3rem;
     height: 0px;
     margin-top: -6.3rem;
-    margin-left: 6rem;
+    margin-left: 10vh;
 
     border: .5px solid #000000;
 }
