--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,8 +88,11 @@
                     <h2 id="current-deal-commission"></h2>
                 </div>
             </div>
+        <div>
             <h2 class="percentage-to-quota-output-header" id="percentage-to-quota-output-header" >Percentage to Quota:</h2>
             <h2 id="percentage-to-quota-output"></h2>
+        </div>
     </div>
+    <script src=/js/index.js></script>
 </body>
 </html>
