--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,7 +81,7 @@
     <div class="results" id="results">
             <div>
                 <div>
-                    <h1 class="expected-payout-header" id="expected-payout-header">Here is your current attainment after this deal:</h1>
+                    <h1 class="expected-payout-header" id="expected-payout-header">Your attainment after this deal:</h1>
                 </div>
                 <div>
                     <h2 class= "expected-payout" id="expected-payout">Expected Payout:</h2>
