--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -154,6 +154,7 @@ label {
 
 .submit-button:hover {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
+    background-color: #f5f5f5;
 }
 
 .expected-payout-header {
