--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,11 +14,14 @@
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="body">
     <style> body  {transition: opacity, .75s; opacity:0; }</style>
     <div class="hero">
         <h1 class="hero-text">Digital <br> Proposal Helper</h1>
         <div class="hero-text-divider"></div>
+        <div class="hero-subtitle">
+            <p id="subtitle-text"></p>
+        </div>
     </div>
     <div class="form-body">
     <div class="form-body-container">
@@ -94,5 +97,6 @@
         </div>
     </div>
     <script src=/js/index.js></script>
+    <script src=/js/typewriter.js></script>
 </body>
 </html>
