fixed display issue

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,8 +96,11 @@
             <h2 id="percentage-to-quota-output"></h2>
             <div class="recommended-deals">
                 <div class="recommended-one-year-deal">
-                    <h2 id="recommended-one-year-deal"></h2></div>
-            </div>
+                    <h2 id="recommended-one-year-deal"></h2>
+                </div>
+                <div class="recommended-three-year-deal">
+                    <h2 id="recommended-three-year-deal"></h2>
+                </div>
         </div>
     </div>
     <script src=/js/index.js></script>
