--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,6 +94,8 @@
         <div>
             <h2 class="percentage-to-quota-output-header" id="percentage-to-quota-output-header" >Percentage to Quota:</h2>
             <h2 id="percentage-to-quota-output"></h2>
+        </div>
+        <div id="recommended-deals-container">
             <div class="recommended-deals">
                 <div class="recommended-one-year-deal">
                     <h2 id="recommended-one-year-deal"></h2>
@@ -101,8 +103,8 @@
                 <div class="recommended-three-year-deal">
                     <h2 id="recommended-three-year-deal"></h2>
                 </div>
+            </div>
         </div>
-    </div>
     <script src=/js/index.js></script>
     <script src=/js/typewriter.js></script>
 </body>
