--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -82,6 +82,10 @@ input {
     transition: box-shadow .2s;
 }
 
+input:hover {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+}
+
 input:focus {
     box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25)
 }
