--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -83,11 +83,12 @@ input {
 }
 
 input:hover {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transition: box-shadow .2s;
 }
 
 input:focus {
-    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25)
+    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
 }
 
 form {
