--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -76,6 +76,7 @@ input {
     font-size: 14px;
     border: none;
     margin-bottom: 2rem;
+    border: solid 1px red;
 
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 
@@ -87,7 +88,7 @@ input:hover {
 }
 
 input:focus {
-    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
+    border: 1px solid black;
 }
 
 form {
@@ -107,10 +108,6 @@ input::-webkit-inner-spin-button {
 
 input::placeholder {
     opacity: .5;
-}
-
-input:invalid:required {
-    border: solid 1px red;
 }
 
 label {
