--- a/public/css/proposal-helper-styles.css
+++ b/public/css/proposal-helper-styles.css
@@ -9,7 +9,7 @@ body {
     margin: 0;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 100;
-    transition: opacity .1s;
+    transition: opacity .1s
 }
 
 h1 {
@@ -25,13 +25,49 @@ h2 {
     padding-left: 1rem;
 }
 
+a { color: #000000 }
+
+    a:visited { text-decoration: none; color: #000000; }
+    a:hover { text-decoration: none; color:#000000; }
+    a:focus { text-decoration: none; color:#000000; }
+    a:hover, a:active { text-decoration: none; color:#000000; }
+
 .hero {
     position: relative;
-    background: url(../images/hero.jpg);
+    background: url(../images/proposal-hero.jpg);
     background-size: cover;
     overflow: hidden;
     width: 100%;
     height: 90vh;
+}
+
+.nav {
+    position: absolute;
+    top: -.8rem;
+    right: 2rem;
+    z-index: 1;
+}
+
+.nav-container {
+    position: absolute;
+    top: -.8rem;
+    background: rgba(196, 196, 196, 0.8);
+    height: 32px;
+    width: 100%;
+    position: absolute;
+    margin-top: 11px;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    color: #000000;
+}
+  
+li {
+    font-size: 12px;
+    display: inline;
+    padding-left: 1.5rem;
 }
 
 .hero-text {
@@ -63,9 +99,9 @@ h2 {
 }
 
 .form-body-container {
-    background-color: #E6E7E9;
-    border-radius: 3px;
-    box-shadow: 0px 12px 15px rgba(0, 0, 0, 0.25);
+    background-color: #d6d6d6;
+    border-radius: 10px;
+    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.25);
 }
 
 input {
@@ -76,7 +112,7 @@ input {
     font-size: 14px;
     border: none;
     margin-bottom: 2rem;
-    border: solid 1px red;
+    border: solid 1px #8c8c8c;
 
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 
@@ -148,7 +184,7 @@ label {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 16px;
 
-    border: 1px solid #000000;
+    border: 1px solid black;
 
     border: none;
     border-radius: 5px;
