--- a/views/proposal-helper.ejs
+++ b/views/proposal-helper.ejs
@@ -11,12 +11,22 @@
     <meta property="og:title" content="Proposal Helper" />
     <meta property="og:image" content="/images/messages-preview.png"/>
     <link rel="icon" href="/images/icon2.png">
-    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/proposal-helper-styles.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300&display=swap" rel="stylesheet">
 </head>
 <body id="body">
     <style> body  {transition: opacity, .75s; opacity:0; }</style>
     <div class="hero">
+            <div class="nav">
+                    <ul>
+                        <li><a href="/">Home</a></li>
+                        <li>|</li>
+                        <li><a href="/journals">Personal Journal</a></li>
+                        <li>|</li>
+                        <li><a href="/proposal-helper">Proposal Helper</a></li>
+                    </ul>
+                    </div>
+            <div class="nav-container"></div>
         <h1 class="hero-text">Digital <br> Proposal Helper</h1>
         <div class="hero-text-divider"></div>
         <div class="hero-subtitle">
@@ -105,7 +115,7 @@
                 </div>
             </div>
         </div>
-    <script src=/js/index.js></script>
+    <script src=/js/proposal-helper-logic.js></script>
     <script src=/js/typewriter.js></script>
 </body>
 </html>
