--- a/views/proposal-helper.ejs
+++ b/views/proposal-helper.ejs
@@ -17,7 +17,7 @@
 <body id="body">
     <style> body  {transition: opacity, .75s; opacity:0; }</style>
     <div class="hero">
-            <div class="nav">
+            <!-- <div class="nav">
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li>|</li>
@@ -26,7 +26,7 @@
                         <li><a href="/proposal-helper">Proposal Helper</a></li>
                     </ul>
                     </div>
-            <div class="nav-container"></div>
+            <div class="nav-container"></div> -->
         <h1 class="hero-text">Digital <br> Proposal Helper</h1>
         <div class="hero-text-divider"></div>
         <div class="hero-subtitle">
