--- a/views/commission-calculator.ejs
+++ b/views/commission-calculator.ejs
@@ -60,26 +60,24 @@
         </div>
         <div class="current-deal-form">
             <div>
-                <h1>What deal do you want to estimate your earnings on?</h1>
+                <h1>What do you want to estimate your earnings on?</h1>
             </div>
                 <form>
                     <label>Term Length in Years:</label>
-                        <input type="number" name="current-term-length" id="current-term-length" placeholder="2" required>
+                        <select class= "current-term-length" name= "current-term-length" id="current-term-length">
+                            <option value="1" name="one-year" selected>One Year</option>
+                            <option value="2" name="two-year">Two Year</option>
+                            <option value="3" name="three-year">Three Year</option>
+                        </select>
                     <br>
                     <label>ACV:</label>
                         <input type="number" name="current-acv" id="current-acv" placeholder="e.g. $100,000" required>
                     <br>
-                    <label>Revenue in Year 2:</label>
+                    <label>Revenue in Years 2+:</label>
                         <input type="number" name="current-multi-year-revenue" id="current-multi-year-revenue" placeholder="e.g. $100,000" required>
                     <br>
                     <label>Services Hours:</label>
                         <input type="number" name="current-services-hours" id="current-services-hours" placeholder="e.g. 80" required>
-                    <br>    
-                    <label>Payment Terms:</label>
-                    <select id="current-payment-terms">
-                        <option value="Annual" name="annual-payments" selected>Annual</option>
-                        <option value="Semi-Annual or Quarterly" name="semi-annual-payments">Semi-Annual or Quarterly</option>
-                    </select>
                     <br>
                 </form>
                 <div>
@@ -96,10 +94,13 @@
                 </div>
                 <div>
                     <h2 class= "expected-payout" id="expected-payout"><b>Expected Payout:</b></h2>
+                    <br>
+                    <br>
                     <h2 id="current-deal-commission"></h2>
                 </div>
             </div>
         <div>
+            <br>
             <h2 class="percentage-to-quota-output-header" id="percentage-to-quota-output-header"><b>Percentage to Quota:</b></h2>
             <h2 id="percentage-to-quota-output"></h2>
         </div>
