--- a/views/commission-calculator.ejs
+++ b/views/commission-calculator.ejs
@@ -19,7 +19,7 @@
     <div class="hero">
         <div class="nav">
             <ul>
-                <li><a href="/">Proposal Helper</a></li>
+                <li><a href="/">Proposal Generator</a></li>
                 <li>|</li>
                 <li><a href="/commission-calculator">Commission Calculator</a></li>
             </ul>
