--- a/views/proposal-helper.ejs
+++ b/views/proposal-helper.ejs
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Proposal Helper</title>
+    <title>Proposal Generator</title>
     <meta property="og:title" content="Proposal Helper" />
     <meta property="og:image" content="/images/messages-preview.png"/>
     <link rel="icon" href="/images/icon2.png">
